<resources>
    <string name="app_name">Rocks</string>
    <string name="action_settings">Ustawienia konta</string>
    <string name="title_activity_all_items">Dostępne wpisy</string>
    <string name="title_activity_add_item">Rozpoznawanie okazu</string>
    <string name="title_activity_create_account">Załóż nowe konto</string>
    <string name="title_activity_about">O Aplikacji</string>
    <string name="title_activity_search">Wyszukiwarka</string>
    <string name="title_activity_settings">Ustawienia konta</string>
    <string name="title_activity_item_info">Szczegółowy opis okazu</string>
    <string name="title_activity_view_add_item">ViewAddItemActivity</string>
    <string name="password_et">Hasło</string>
    <string name="user_login_et">Nazwa użytkownika</string>
    <string name="login_btn">Zaloguj</string>
    <string name="create_account_btn">Załóż konto</string>
    <string name="password_forgot_btn">Odzystaj hasło</string>
    <string name="author">Autor:</string>
    <string name="comment_content">Treść (max 150 znaków)</string>
    <string name="add_comment_btn">Dodaj komentarz</string>
    <string name="color_tv">BARWA</string>
    <string name="np_b1_b2_b3_ta_brunatna_czerwona"><![CDATA[np. b1>b2>b3 - żółta, brunatna, czerwona]]></string>
    <string name="type">TYP</string>
    <string name="np_magmowa_osadowa_metamorficzna">np. magmowa, osadowa, metamorficzna</string>
    <string name="composition">SKŁAD MINERALNY</string>
    <string name="np_muskowit_amfobole_biotyt_kwarc">np. muskowit, amfobole, biotyt, kwarc</string>
    <string name="structura">STRUKTURA</string>
    <string name="np_zbita_masywna">np. zbita, masywna</string>
    <string name="tekstrura">TEKSTURA</string>
    <string name="np_bez_adna_uporz_tkowana">np.bezładna, uporzątkowana</string>
    <string name="binder">SPOIWO</string>
    <string name="np_typ_cement_matrix_krzemiokowe_wapienne">np. typ: cement/matrix - krzemiokowe, wapienne</string>
    <string name="designation">ROZPOZNANIE</string>
    <string name="np_wapie_marmur_bazalt_krzemie">np. wapień, marmur, bazalt, krzemień</string>
    <string name="others">INNE</string>
    <string name="np_ska_a_w_cz_ci_zmetamorfizowana">np. skała w części zmetamorfizowana</string>
    <string name="aparat">Aparat</string>
    <string name="galeria">Galeria</string>
    <string name="dodaj_ska">Dodaj skałę</string>
    <string name="content_description_rock_image_view">zdjęcie opisywanej skały</string>
    <string name="rocks">ROCKS</string>
    <string name="nazwa_u_ytkownika">Nazwa użytkownika</string>
    <string name="imi">Imię</string>
    <string name="nazwisko">Nazwisko</string>
    <string name="has_o">Hasło</string>
    <string name="powt_rz_has_o">Powtórz hasło</string>
    <string name="utw_rz_konto">Utwórz konto</string>
    <string name="adres_email">Adres Email</string>
    <string name="rozpoznanie">Rozpoznanie:</string>
    <string name="krzemie">Krzemień</string>
    <string name="typ">Typ:</string>
    <string name="osadowa">Osadowa</string>
    <string name="kolor">Kolor:</string>
    <string name="struktura">Struktura:</string>
    <string name="tekstura">Tekstura:</string>
    <string name="sk_ad">Skład:</string>
    <string name="spoiwo">Spoiwo:</string>
    <string name="inne">Inne:</string>
    <string name="dodaj_komnetarz">Dodaj komnetarz</string>
    <string name="edytuj">Edytuj</string>
    <string name="usu_wpis">Usuń wpis</string>
    <string name="komentarze">Komentarze:</string>
    <string name="fraza">Fraza</string>
    <string name="lupa_do_wyszukiwania">lupa do wyszukiwania</string>
    <string name="miniatura_zdjecia">miniatura zdjecia</string>
    <string name="rodzaj_ska_y">Rodzaj skały:   </string>
    <string name="autor">Autor:</string>

    <string-array name="search_array">
        <item>test_1</item>
        <item>test_2</item>
        <item>test_3</item>
        <item>test_4</item>
    </string-array>
    <string name="title_activity_search_items">Wyniki wyszukiwania</string>


</resources>
