<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pl.assolution.rocks.AddItemActivity"
    tools:showIn="@layout/activity_add_item">


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="20">

        <TextView
            android:id="@+id/color_add_tv"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_columnSpan="2"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:text="@string/color_tv" />

        <EditText
            android:id="@+id/color_add_et"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_columnSpan="2"
            android:textSize="14sp"
            android:layout_marginTop="-7dp"
            android:hint="@string/np_b1_b2_b3_ta_brunatna_czerwona" />

        <TextView
            android:id="@+id/type_add_tv"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_columnSpan="2"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:text="@string/type" />

        <EditText
            android:id="@+id/type_add_et"
            android:layout_column="0"
            android:layout_row="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_columnSpan="2"
            android:textSize="14sp"
            android:layout_marginTop="-7dp"
            android:hint="@string/np_magmowa_osadowa_metamorficzna" />

        <TextView
            android:id="@+id/composition_add_tv"
            android:layout_column="0"
            android:layout_row="4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_columnSpan="2"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:text="@string/composition" />

        <EditText
            android:id="@+id/composition_add_et"
            android:layout_column="0"
            android:layout_row="5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_columnSpan="2"
            android:textSize="14sp"
            android:layout_marginTop="-7dp"
            android:hint="@string/np_muskowit_amfobole_biotyt_kwarc" />

        <TextView
            android:id="@+id/structure_add_tv"
            android:layout_column="0"
            android:layout_row="6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_columnSpan="2"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:text="@string/structura" />

        <EditText
            android:id="@+id/structure_add_et"
            android:layout_column="0"
            android:layout_row="7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_columnSpan="2"
            android:textSize="14sp"
            android:layout_marginTop="-7dp"
            android:hint="@string/np_zbita_masywna" />

        <TextView
            android:id="@+id/texture_add_tv"
            android:layout_column="0"
            android:layout_row="8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_columnSpan="2"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:text="@string/tekstrura" />

        <EditText
            android:id="@+id/texture_add_et"
            android:layout_column="0"
            android:layout_row="9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_columnSpan="2"
            android:textSize="14sp"
            android:layout_marginTop="-7dp"
            android:hint="@string/np_bez_adna_uporz_tkowana" />

        <TextView
            android:id="@+id/binder_add_tv"
            android:layout_column="0"
            android:layout_row="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_columnSpan="2"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:text="@string/binder" />

        <EditText
            android:id="@+id/binder_add_et"
            android:layout_column="0"
            android:layout_row="11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_columnSpan="2"
            android:textSize="14sp"
            android:layout_marginTop="-7dp"
            android:hint="@string/np_typ_cement_matrix_krzemiokowe_wapienne" />

        <TextView
            android:id="@+id/designation_add_tv"
            android:layout_column="0"
            android:layout_row="12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_columnSpan="2"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:text="@string/designation" />

        <EditText
            android:id="@+id/designation_add_et"
            android:layout_column="0"
            android:layout_row="13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_columnSpan="2"
            android:textSize="14sp"
            android:layout_marginTop="-7dp"
            android:hint="@string/np_wapie_marmur_bazalt_krzemie" />

        <TextView
            android:id="@+id/other_add_tv"
            android:layout_column="0"
            android:layout_row="14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_columnSpan="2"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:text="@string/others" />

        <EditText
            android:id="@+id/other_add_et"
            android:layout_column="0"
            android:layout_row="15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_columnSpan="2"
            android:textSize="14sp"
            android:layout_marginTop="-7dp"
            android:hint="@string/np_ska_a_w_cz_ci_zmetamorfizowana" />

        <ImageView
            android:contentDescription="@string/content_description_rock_image_view"
            android:id="@+id/add_image_iv"
            android:layout_column="0"
            android:layout_row="17"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_columnSpan="2"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:id="@+id/add_item_layout_buttons"
            android:visibility="visible"
            android:layout_column="0"
            android:layout_row="16"
            android:layout_columnSpan="2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:layout_marginRight="5dp"
                android:id="@+id/take_photo_btn"
                android:layout_gravity="fill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:text="@string/aparat"/>

            <Button
                android:layout_marginLeft="5dp"
                android:id="@+id/gallery_btn"
                android:layout_gravity="fill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:text="@string/galeria"/>
        </LinearLayout>

        <Button
            android:layout_marginTop="15dp"
            android:id="@+id/upload_btn"
            android:layout_gravity="fill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="18"
            android:layout_columnSpan="2"
            android:background="@drawable/button_selector"
            android:text="@string/dodaj_ska"/>
    </GridLayout>
</ScrollView>
