<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_view"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pl.assolution.rocks.ItemInfoActivity"
    tools:showIn="@layout/activity_item_info">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="15"
        android:columnCount="2">

        <ImageView
            android:contentDescription="@string/content_description_rock_image_view"
            android:id="@+id/rock_image_info"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_width="330dp"
            android:layout_height="300dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/designation_info_tv"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_gravity="fill"
            android:padding="7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/rozpoznanie"/>

        <TextView
            android:id="@+id/designation_content_info__tv"
            android:layout_column="1"
            android:layout_row="1"
            android:padding="7dp"
            android:layout_marginTop="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:textSize="16sp"
            android:width="0dp" />

        <TextView
            android:id="@+id/type_info_tv"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_gravity="fill"
            android:padding="7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/typ"/>

        <TextView
            android:id="@+id/type_content_info_tv"
            android:layout_column="1"
            android:layout_row="2"
            android:padding="7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:textSize="16sp"
            android:width="0dp"/>

        <TextView
            android:id="@+id/color_info_tv"
            android:layout_column="0"
            android:layout_row="3"
            android:layout_gravity="fill"
            android:padding="7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/kolor"/>

        <TextView
            android:id="@+id/color_content_info_tv"
            android:layout_column="1"
            android:layout_row="3"
            android:padding="7dp"
            android:width="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/structure_info_tv"
            android:layout_column="0"
            android:layout_row="4"
            android:layout_gravity="fill"
            android:padding="7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/struktura"/>

        <TextView
            android:id="@+id/structure_content_info_tv"
            android:layout_column="1"
            android:layout_row="4"
            android:padding="7dp"
            android:width="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/texture_info_tv"
            android:layout_column="0"
            android:layout_row="5"
            android:layout_gravity="fill"
            android:padding="7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/tekstura"/>

        <TextView
            android:id="@+id/texture_content_info_tv"
            android:layout_column="1"
            android:layout_row="5"
            android:padding="7dp"
            android:width="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/composition_info_tv"
            android:layout_column="0"
            android:layout_row="6"
            android:layout_gravity="fill"
            android:padding="7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/sk_ad"/>

        <TextView
            android:id="@+id/composition_content_info_tv"
            android:layout_column="1"
            android:layout_row="6"
            android:padding="7dp"
            android:width="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/binder_info_tv"
            android:layout_column="0"
            android:layout_row="7"
            android:layout_gravity="fill"
            android:padding="7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/spoiwo"/>

        <TextView
            android:id="@+id/binder_content_info_tv"
            android:layout_column="1"
            android:layout_row="7"
            android:padding="7dp"
            android:width="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/other_info_tv"
            android:layout_column="0"
            android:layout_row="8"
            android:layout_gravity="fill"
            android:padding="7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/inne"/>

        <TextView
            android:id="@+id/other_content_info_tv"
            android:layout_column="1"
            android:layout_row="8"
            android:padding="7dp"
            android:width="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:textSize="16sp"/>

        <Button
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/button_selector"
            android:id="@+id/add_commment_btn"
            android:layout_column="0"
            android:layout_row="9"
            android:layout_columnSpan="2"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:textSize="16sp"
            android:text="@string/dodaj_komnetarz" />

        <LinearLayout
            android:id="@+id/my_options_layout"
            android:layout_column="0"
            android:layout_row="9"
            android:layout_columnSpan="2"
            android:visibility="gone"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:textSize="16sp"
                android:layout_margin="5dp"
                android:background="@drawable/button_selector"
                android:id="@+id/edit__btn"
                android:visibility="visible"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edytuj" />

            <Button
                android:textSize="16sp"
                android:layout_margin="5dp"
                android:background="@drawable/button_selector"
                android:id="@+id/delete_btn"
                android:visibility="visible"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/usu_wpis" />
        </LinearLayout>

        <TextView
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="10"
            android:padding="7dp"
            android:width="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_marginTop="5dp"
            android:textSize="26sp"
            android:textStyle="italic"
            android:text="@string/komentarze"/>
        <ListView
            android:layout_columnSpan="2"
            android:layout_column="0"
            android:layout_row="11"
            android:id="@+id/list_tv"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="10dp"/>
    </GridLayout>
</ScrollView>
